2001-03-29  Sven Wischnowsky  <wischnow@zsh.org>

	* 13833: Completion/Core/_expand: fix comparison of expansions
	with expanded prefix (missing quoting)

	* 13830: Completion/Core/_multi_parts: next try to get rid of
	empty strings being added as possible completion by
	_multi_parts

2001-03-28  Bart Schaefer  <schaefer@zsh.org>

	* 12724: Doc/Zsh/builtins.yo: Nobody has come up with a better fix
	for the misformatted manual page than this hack, so I've finally
	committed it.

2001-03-28  Peter Stephenson  <pws@csr.com>

	* 13818: Doc/Zsh/zle.yo, Src/Zle/zle_keymap,c. Src/Zle/zle_main.c
	[zle_main hunk got omitted from posted patch, oops]: Add
	`bindkey -p' to list bindings with a given prefix.

	* unposted: Doc/Zsh/zle.yo, Doc/Zsh/mod_zle.yo: move ZLE builtin
	documentation from mod_zle.yo to zle.yo.

2001-03-28  Sven Wischnowsky  <wischnow@zsh.org>

	* Completion/Commands/_history_complete_word,
	13815: Doc/Zsh/compsys.yo: more cleanup; simplify the stop
	and liststyles; try to make it obey whatever _main_complete
	says should be done (menu-wise)

	* 13814: Completion/User/_urls, Doc/Zsh/compsys.yo: replace
	`path' with more general `urls' style

	* 13813: Completion/Core/_multi_parts: make sure _multi_parts
	doesn't add the empty string as a possible completion

2001-03-28  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/Commands/_complete_tag: mysterious extra
	blank line somehow crept in at critical point.

2001-03-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 13809: Completion/Base/_arguments: don't add options as
	completions if a `->state' action was used and we are
	directly after the option (in the same word)

2001-03-27  Sven Wischnowsky  <wischnow@zsh.org>

	* 13790: Completion/Base/_arguments, Completion/X/_x_arguments,
	Completion/X/_xt_arguments, Doc/Zsh/compsys.yo: make
	_arguments return 300 only if given the -R option

	* 13789: Completion/Base/_tilde, Completion/Builtins/_popd:
	comment out looking up the prefix-needed style when